--- a/final_proposal.Rmd
+++ b/final_proposal.Rmd
@@ -67,22 +67,10 @@ Key variables we expect to use include:
 
 ### Data cleaning and preprocessing (planned)
 
-Because the full dataset is large (millions of rows), we plan to:
-
-- Restrict the main analysis to a recent time window (e.g., **2015–2024**) while keeping earlier years for trend checks.  
-- Filter to observations with non-missing boroughs and valid coordinates.  
-- Create new variables:
-  - `year`, `month`, `weekday`, `hour` from `CRASH_DATE` and `CRASH_TIME`  
-  - indicators for any injury / any fatality  
-  - grouped categories of contributing factors (e.g., *Driver Inattention*, *Unsafe Speed*, *Alcohol Involvement*, *Other*).  
-- Remove obvious duplicates or records with impossible values (e.g., negative counts).
-
-We will use **R**, primarily the `tidyverse` ecosystem, for data import, cleaning, and analysis.
+Since we have a large data set, we plan to restrict the main analysis to a recent time window (e.g., **2015–2024**) while keeping earlier years for trend checks. We will filter to observations with non-missing boroughs and valid coordinates.  We will create new variables for `year`, `month`, `weekday`, and `hour` from the crash date and time, along with indicators for injuries or fatalities and grouped categories of contributing factors (e.g., Driver Inattention, Unsafe Speed, Alcohol Involvement, Other).
 
 ## Planned Analyses / Visualizations / Coding Challenges
-
 We anticipate the following main components:
-
 1. **Exploratory Data Analysis (EDA)**  
    - Time series plots of monthly crash counts and injury/fatality counts by borough.  
    - Distribution of crashes by hour of day and day of week (e.g., heatmaps).  
@@ -94,42 +82,36 @@ We anticipate the following main components:
    - Identify high-risk areas (“hot spots”) and compare across boroughs.
 
 3. **Policy / temporal comparison**  
-   - Compare crashes **before vs after 2014** (Vision Zero start) using:  
+   - Compare crashes **before vs after 2014** (Vision Zero start) using:
      - Summary statistics  
      - Time-series plots with vertical reference lines  
      - Simple regression / interrupted time series–style comparisons (if appropriate).  
-
 4. **Modeling (injury / fatality risk)**  
    - Build exploratory logistic regression models for:
      - probability of any injury, and/or  
      - probability of any fatality  
    - Predictors may include borough, hour of day, contributing factor categories, and vehicle type.  
    - Assess variable importance and model fit; interpret coefficients in a public-health context.
-
 5. **Visualization and communication**  
    - Well-labeled, publication-quality figures created using `ggplot2`.  
    - Potential interactive elements (e.g., interactive maps or hover tooltips) on the project website.
-
+   
 Coding challenges we anticipate include:
-
 - Efficiently handling a large dataset (memory and speed).  
 - Working with date-time variables and combining `CRASH_DATE` and `CRASH_TIME`.  
 - Cleaning and recoding free-text contributing factor variables into meaningful groups.  
 - Integrating static and (optionally) interactive visualizations into a reproducible website.
 
 ## Intended Final Products
-
 - **Written report (R Markdown → HTML)**  
   A self-contained document describing motivation, data, methods, results, and discussion.
-
 - **Project website**  
   Built using R Markdown / Quarto and GitHub Pages, with:
   - Landing page summarizing motivation and main findings  
   - Detailed EDA and analysis pages  
   - Embedded full report
-
-- **Screencast (≈2 minutes)**  
-  A narrated video that walks through the project motivation and key visualizations, aimed at classmates and a general audience.
+- **Screencast**  
+  A narrated video that walks through our project for the audience.
 
 - **GitHub repository**  
   Public repo containing:
