--- a/final_proposal.Rmd
+++ b/final_proposal.Rmd
@@ -37,13 +37,12 @@ Since we have a large data set, we plan to restrict the main analysis to a recen
 
 1. **Exploratory Data Analysis (EDA)**  
    - Time series plots of monthly crash counts and injury/fatality counts by borough.  
-   - Distribution of crashes by hour of day and day of week (e.g., heatmaps).  
+   - Distribution of crashes by hour of day and day of week.  
    - Top contributing factors overall and stratified by borough or time of day.  
 
 2. **Spatial analysis**  
-   - Map crash locations using `leaflet` or `ggplot2` with spatial data (`sf`).  
+   - Map crash locations with spatial data.  
    - Aggregate to neighborhood or ZIP code for **crash density** visualizations.  
-   - Identify high-risk areas (“hot spots”) and compare across boroughs.
 
 3. **Policy / temporal comparison**  
    - Compare crashes **before vs after 2014** (Vision Zero start) using:
