--- a/report.Rmd
+++ b/report.Rmd
@@ -10,3 +10,11 @@ knitr::opts_chunk$set(
   warning = FALSE
 )
 ```
+# Motivation
+Motor vehicle collisions are a major public health and transportation concern in New York City. Every day, hundreds of crashes occur across the five boroughs, affecting pedestrians, cyclists, motorists, and entire communities. Living in a dense and highly mobile urban environment, we constantly witness the consequences of unsafe road conditions, heavy traffic, and the complex interaction between human behavior and the built environment. These experiences motivated us to investigate the patterns and factors underlying NYC collisions more systematically.
+
+Through this project, we aimed to combine our growing data science skills with a real-world issue that has substantial societal impact. Traffic safety is not only a transportation problem—it is a public health problem. By exploring large-scale open data from NYC, we sought to better understand when and where crashes occur, what environmental or contextual factors contribute to them, and how these factors relate to injury severity.
+
+In particular, we were interested in how variables such as time of day, borough differences, and vehicle type may influence collision outcomes. These aspects are often discussed anecdotally—“nighttime is dangerous,” “Brooklyn has the worst traffic,” “rainy weather leads to more accidents”—but they rarely receive thorough, data-driven examination. Our motivation was to create a clear, visual, and analytical exploration of these patterns in order to turn widely held assumptions into evidence-based insights.
+
+Ultimately, this project allowed us to apply R’s data manipulation, mapping, and modeling tools to investigate a real problem with real stakes. By analyzing NYC’s collision trends, we hope to contribute not only to our technical learning but also to broader conversations about how to make urban environments safer for everyone.
